<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RopaSuperiorActivity">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/RelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="618dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintVertical_bias="1.0"
        app:navGraph="@navigation/mobile_navigation">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="560dp"
            android:backgroundTint="#8bb8ef"
            android:text="@string/camisetas" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/button"
            android:layout_alignTop="@+id/button"
            android:layout_alignEnd="@+id/button"
            android:layout_alignBottom="@+id/button"
            android:layout_marginStart="0dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="460dp"
            android:backgroundTint="#8bb8ef"
            android:text="@string/sudaderas" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/button3"
            android:layout_alignTop="@+id/button3"
            android:layout_alignEnd="@+id/button3"
            android:layout_alignBottom="@+id/button3"
            android:layout_marginStart="0dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="-0dp"
            android:layout_marginBottom="160dp"
            android:backgroundTint="#8bb8ef"
            android:text="@string/jerseys" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="355dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            app:backgroundTint="#c28bef"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:srcCompat="@drawable/ic_baseline_add_24" />

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/design_default_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconSize="35dp"
        app:itemIconTint="@drawable/bottom_navigation_selector"
        />

</androidx.constraintlayout.widget.ConstraintLayout>